Fix A2A server errors
A2A discovery seems to require agent cards to know their own URL. Also addresses some CR deploy issues I faced

--- a/Dockerfile.alphabot
+++ b/Dockerfile.alphabot
@@ -19,5 +19,6 @@ COPY common/ ./common/
 COPY alphabot/ ./alphabot/
 
 # Command to run the AlphaBot A2A server using module execution
-# Use sh -c to ensure $PORT is expanded by the shell
-CMD ["sh", "-c", "python -m alphabot --host 0.0.0.0 --port $PORT"]
+# The host and port are now determined by the application code,
+# respecting the PORT environment variable from Cloud Run.
+CMD ["python", "-m", "alphabot"]
