--- a/Dockerfile.riskguard
+++ b/Dockerfile.riskguard
@@ -19,5 +19,6 @@ COPY common/ ./common/
 COPY riskguard/ ./riskguard/
 
 # Command to run the RiskGuard A2A server using module execution
-# Use sh -c to ensure $PORT is expanded by the shell
-CMD ["sh", "-c", "python -m riskguard --host 0.0.0.0 --port $PORT"]
+# The host and port are now determined by the application code,
+# respecting the PORT environment variable from Cloud Run.
+CMD ["python", "-m", "riskguard"]
